<resources>
    <string name="app_name">Recetalandia</string>
    <string name="nomUsuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="buscarReceta">Buscar receta</string>
    <string name="inicioSesion">Iniciar sesión</string>
    <string name="registro">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="linkRegistro">¿No tiene una cuenta? Regístrate aquí!</string>
    <string name="confirmarContrasena">Confirmar contraseña</string>
    <string name="buscarRecetas">Buscar recetas…</string>
    <string name="nombre">Nombre:</string>
    <string name="recetaPasos">Pasos a seguir:</string>
    <string name="verIngredientes">Ver ingredientes</string>
    <string name="addReceta">Crear receta</string>
    <string name="misRecetas">Mis recetas:</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="volverMenu">Volver al menú</string>
    <string name="addIngredientes">Añadir ingredientes</string>
    <string name="nomReceta">Nombre de receta</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="anadir">Añadir</string>
    <string name="pulsaBorrar">*Pulsa un ingrediente para borrarlo.</string>
    <string name="obtenerImagen">¿De dónde quieres obtener la imagen?</string>
    <string name="idioma">Selecciona el idioma para la aplicación:</string>
    <string name="cambiarIdioma">Cambiar idioma</string>
    <string name="perfil">Ir al perfil</string>
    <string name="toastNombreReceta">Que no se te olvide escribir el nombre de la receta!</string>
    <string name="toastNameExist">Ese nombre ya existe, piensa otro para tu receta.</string>
    <string name="toastPasosReceta">Que no se te olvide escribir los pasos de la receta!</string>
    <string name="toastIngredientesReceta">Que no se te olviden escribir los ingredientes de la receta!</string>
    <string name="notiRecetaAnadida">Receta añadida!</string>
    <string name="notiLaReceta">La receta</string>
    <string name="notiHaSidoAñadida">ha sido añadida.</string>
    <string name="addNuevoIngrediente">Añade un nuevo ingrediente:</string>
    <string name="ingredienteAnadido">Ingrediente añadido!</string>
    <string name="aceptarPermiso">Si quieres sacar fotos tienes que aceptar el permiso.</string>
    <string name="nomContrIncorrectas">Nombre o contraseña incorrectas.</string>
    <string name="nombreVacio">El nombre no puede estar vacío.</string>
    <string name="nombreLargo">El nombre no puede tener más de 20 letras.</string>
    <string name="contraVacia">La contraseña no puede estar vacía.</string>
    <string name="contraLarga">La contraseña no puede tener más de 20 letras.</string>
    <string name="buscadorVacio">Que no se te olvide escribir el nombre de la receta!</string>
    <string name="registroCorrecto">Registrado correctamente, inicia sesión y empieza a disfrutar!</string>
    <string name="contraNoCoincide">Las contraseñas no coinciden.</string>
    <string name="contraConfVacia">La contraseña de confirmación no puede estar vacía.</string>
    <string name="contraConfLarga">La contraseña de confirmación no puede tener más de 20 letras.</string>
    <string name="nombreEnUso">Ese nombre ya está en uso, prueba con otro.</string>
    <string name="recetaNoExiste">No existe la receta que estás buscando…</string>
    <string name="dialogNuevaReceta">Prueba a crear una nueva receta!</string>
    <string name="noSesionIniciada">Vaya… No hay una sesión iniciada.</string>
    <string name="inicioRegistro">Tienes que iniciar sesión o registrarte para poder crear una nueva receta.</string>
    <string name="descargarReceta">Descargar receta</string>
    <string name="recetaDescargada">Receta descargada!</string>
    <string name="notiDescarga">ha sido descargada.</string>
    <string name="eliminarUsuario">¿Seguro que quieres eliminar tu cuenta?</string>
    <string name="guardar">Guardar</string>
    <string name="locationES" translatable="false">es</string>
    <string name="locationEN" translatable="false">en</string>
    <string name="eliminar">Eliminar</string>
    <string name="noIngrediente">¡Qué no se te olvide el ingrediente!</string>
    <string name="play" translatable="false">Play</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="calendario">Calendario</string>
    <string name="mostrarEventos">Mostrar eventos</string>
    <string name="addEvent">Añadir evento</string>
    <string name="noEventos">No hay eventos creados.</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="datosEvento">Escriba los datos del evento:</string>
    <string name="fechaEvento">Fecha (dd-mm-yyyy)</string>
    <string name="noTitulo">¡No te olvides del título!</string>
    <string name="noDescripcion">¡No te olvides de la descripción!</string>
    <string name="noDate">¡No te olvides de la fecha!</string>
    <string name="formatoFecha">La fecha tiene que tener el formato \'dd-mm-yyyy\'.</string>
    <string name="eventoAnadido">¡Evento añadido!</string>
    <string name="editarEvento">Editar evento</string>
    <string name="editarDatosEventos">Selecciona un evento y edita sus datos:</string>
    <string name="eventoEditado">¡Evento editado!</string>
    <string name="eliminarEvento">Eliminar evento</string>
    <string name="eliminarEventoTexto">Selecciona el evento que quieras eliminar:</string>
    <string name="eventoEliminado">¡Evento eliminado!</string>
    <string name="guardarDescarga">Selecciona donde guardar la receta:</string>
</resources>