<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/dialog">

        <Button
            android:id="@+id/buttonVolverInicio"
            style="@style/Botones"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonRegistro"
            style="@style/Botones"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="60dp"
            android:text="@string/registro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonInicio"
            style="@style/Botones"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="60dp"
            android:text="@string/inicioSesion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toEndOf="@+id/buttonRegistro" />

        <TextView
            android:id="@+id/noSesioniniciada"
            style="@style/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/noSesionIniciada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inicioRegistro"
            style="@style/Texto"
            android:layout_width="240dp"
            android:layout_height="97dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/inicioRegistro"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noSesioniniciada"
            app:layout_constraintVertical_bias="0.575" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="63dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonInicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/inicioRegistro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.685"
            app:srcCompat="@drawable/inicioregistro" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>