<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/dialog">

        <EditText
            android:id="@+id/nombreUsuarioTextEdit"
            style="@style/EditText"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/nomUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonVolverEdit"
            style="@style/Botones"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioTextEdit" />

        <Button
            android:id="@+id/buttonGuardar"
            style="@style/Botones"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioTextEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>