<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".UsuarioPerfil">

    <Button
        android:id="@+id/volverMenuBoton"
        style="@style/Botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/volverMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cerrarSesionBoton"
        style="@style/Botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cerrarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textUsuarioRecetas"
        style="@style/Texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/misRecetas"
        app:layout_constraintBottom_toTopOf="@+id/usuarioRecetas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoUsuario"
        app:layout_constraintVertical_bias="0.584" />

    <Button
        android:id="@+id/botonNewReceta"
        style="@style/Botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="@string/addReceta"
        app:layout_constraintBottom_toTopOf="@+id/usuarioRecetas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/iconoUsuario" />

    <TextView
        android:id="@+id/nombreUsuarioText"
        style="@style/Texto"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:gravity="center|center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/botonNewReceta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/iconoUsuario"
        app:layout_constraintTop_toBottomOf="@+id/labarra" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usuarioRecetas"
        android:layout_width="362dp"
        android:layout_height="388dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/volverMenuBoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iconoUsuario"
        android:layout_width="132dp"
        android:layout_height="151dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labarra"
        app:srcCompat="@drawable/usuarioicono" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/labarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/dialog"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_editar"
        android:layout_width="411dp"
        android:layout_height="257dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>